Rewrite manual Java tests to JUnit 5 and add run_tests.sh
Co-authored-by: johandersson <3342471+johandersson@users.noreply.github.com>